Introduce `TASK_ENQUEUE` event
The `TASK_ENQUEUE` event is triggered when the task has been added to
the queue, but is not yet started.

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -88,6 +88,10 @@
 			<h3>Stats since refresh</h3>
 			<ul class="list-group">
 			  <li class="list-group-item">
+			    <span class="badge" id="TASK_ENQUEUE">0</span>
+			    Tasks enqueued
+			  </li>
+			  <li class="list-group-item">
 			    <span class="badge" id="TASK_START">0</span>
 			    Tasks started
 			  </li>
